security/kyverno/policies/require-liveness-probe.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-liveness-probe
spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: check-liveness-probe
      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "Containers must define a livenessProbe."

        pattern:
          spec:
            containers:
              - livenessProbe:
                  "?*": "*"
