security/kyverno/policies/require-readiness-probe.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-readiness-probe
spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: check-readiness-probe
      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "Containers must define a readinessProbe."

        pattern:
          spec:
            containers:
              - readinessProbe:
                  "?*": "*"
