security/kyverno/policies/require-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources
spec:
  validationFailureAction: Enforce
  background: true

  rules:
  - name: check-resources

    match:
      any:
      - resources:
          kinds:
          - Pod

    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
          - local-path-storage
          - argocd
          - kyverno
          - monitoring

    validate:
      message: CPU and memory requests/limits are required.
      pattern:
        spec:
          containers:
          - resources:
              requests:
                cpu: "?*"
                memory: "?*"
              limits:
                cpu: "?*"
                memory: "?*"
